add annotationType variable